force-app/main/default/objects/Contact/fields/Account_record_type_name__c.field-meta.xml
<CustomField>
    <fullName>Account_record_type_name__c</fullName>
    <description>The record type name of this contact&apos;s account</description>
    <formula>Account.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The record type name of this contact&apos;s account</inlineHelpText>
    <label>Account record type name</label>
    <type>Text</type>
</CustomField>