force-app/main/default/objects/Contact/fields/Anonymous__c.field-meta.xml
<CustomField>
    <fullName>Anonymous__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this contact prefers to remain anonymous</description>
    <inlineHelpText>Checked if this contact prefers to remain anonymous</inlineHelpText>
    <label>Anonymous</label>
    <type>Checkbox</type>
</CustomField>