force-app/main/default/objects/Contact/fields/Approximate_age__c.field-meta.xml
<CustomField>
    <fullName>Approximate_age__c</fullName>
    <description>Approximate age of contact</description>
    <inlineHelpText>Approximate age of contact</inlineHelpText>
    <label>Approximate age</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>35 or younger</fullName>
            </value>
            <value>
                <fullName>Over 35</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>