force-app/main/default/objects/Contact/fields/Bio_Summary__c.field-meta.xml
<CustomField>
    <fullName>Bio_Summary__c</fullName>
    <description>Bio notes on the contact, maintained by Donor Services</description>
    <inlineHelpText>Bio notes on the contact, maintained by Donor Services</inlineHelpText>
    <label>Bio/Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>