force-app/main/default/objects/Contact/fields/Bounce_date__c.field-meta.xml
<CustomField>
    <fullName>Bounce_date__c</fullName>
    <description>The date on which a message sent to this contact from marketing cloud bounced</description>
    <inlineHelpText>The date on which a message sent to this contact from marketing cloud bounced</inlineHelpText>
    <label>Bounce date</label>
    <type>Date</type>
</CustomField>