force-app/main/default/objects/Contact/fields/Contact_count__c.field-meta.xml
<CustomField>
    <fullName>Contact_count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>