force-app/main/default/objects/Contact/fields/Contact_source__c.field-meta.xml
<CustomField>
    <fullName>Contact_source__c</fullName>
    <label>Contact Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>