force-app/main/default/objects/Contact/fields/ContactExternalID__c.field-meta.xml
<CustomField>
    <fullName>ContactExternalID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>An ID number used by a prior data system to identify this Contact.</description>
    <externalId>true</externalId>
    <inlineHelpText>An ID number used by a prior data system to identify this Contact.</inlineHelpText>
    <label>Contact External ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>