force-app/main/default/objects/Contact/fields/Data_use_consent__c.field-meta.xml
<CustomField>
    <fullName>Data_use_consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Consent to store and use data</description>
    <inlineHelpText>Consent to store and use data</inlineHelpText>
    <label>Data use consent</label>
    <type>Checkbox</type>
</CustomField>