force-app/main/default/objects/Contact/fields/Date_of_data_use_consent__c.field-meta.xml
<CustomField>
    <fullName>Date_of_data_use_consent__c</fullName>
    <description>Date on which consent was given to store and use data</description>
    <inlineHelpText>Date on which consent was given to store and use data</inlineHelpText>
    <label>Date of data use consent</label>
    <type>Date</type>
</CustomField>