force-app/main/default/objects/Contact/fields/Description_GM__c.field-meta.xml
<CustomField>
    <fullName>Description_GM__c</fullName>
    <description>First name / last name / title, suitable for describing this contact at community sites</description>
    <formula>TRIM(
 IF(NOT(ISBLANK(FirstName)), FirstName &amp; &quot; &quot;, &quot;&quot;) &amp;
 IF(NOT(ISBLANK(LastName)), LastName &amp; &quot; &quot;, &quot;&quot;) &amp;
 IF(NOT(ISBLANK(Title)), &quot;(&quot; &amp; TRIM(Title) &amp; &quot;) &quot;,&quot;&quot;)
)</formula>
    <inlineHelpText>First name / last name / title, suitable for describing this contact at community sites</inlineHelpText>
    <label>Description GM</label>
    <type>Text</type>
</CustomField>