force-app/main/default/objects/Contact/fields/Description_GM_plus_email__c.field-meta.xml
<CustomField>
    <fullName>Description_GM_plus_email__c</fullName>
    <description>First name / last name / title / email, suitable for describing this contact at community sites</description>
    <formula>Description_GM__c &amp; &quot; -- Email: &quot; &amp; Email</formula>
    <inlineHelpText>First name / last name / title / email, suitable for describing this contact at community sites</inlineHelpText>
    <label>Description GM plus email</label>
    <type>Text</type>
</CustomField>