force-app/main/default/objects/Contact/fields/Do_Not_Call_acct__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call_acct__c</fullName>
    <description>Checked if this account/contact does not wish to be called (set at the Account level).</description>
    <formula>Account.Do_not_call__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if this account/contact does not wish to be called (set at the Account level).</inlineHelpText>
    <label>Do Not Call acct</label>
    <type>Checkbox</type>
</CustomField>