force-app/main/default/objects/Contact/fields/Do_not_contact__c.field-meta.xml
<CustomField>
    <fullName>Do_not_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this contact does not wish to receive communications of any sort.</inlineHelpText>
    <label>Do Not Contact</label>
    <type>Checkbox</type>
</CustomField>