force-app/main/default/objects/Contact/fields/Do_not_solicit__c.field-meta.xml
<CustomField>
    <fullName>Do_not_solicit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this Contact should not be solicited for gifts.</inlineHelpText>
    <label>Do Not Solicit</label>
    <type>Checkbox</type>
</CustomField>