force-app/main/default/objects/Contact/fields/Email2__c.field-meta.xml
<CustomField>
    <fullName>Email2__c</fullName>
    <description>Alternate email address</description>
    <inlineHelpText>Alternate email address</inlineHelpText>
    <label>Email2</label>
    <type>Email</type>
</CustomField>