force-app/main/default/objects/Contact/fields/Email_notes__c.field-meta.xml
<CustomField>
    <fullName>Email_notes__c</fullName>
    <inlineHelpText>Notes describing any special uses or restrictions when using this contact&apos;s email addresses.  A total of 200 characters can be entered.</inlineHelpText>
    <label>Email Notes</label>
    <length>200</length>
    <type>Text</type>
</CustomField>