force-app/main/default/objects/Contact/fields/Email_unsubscribe_preferences__c.field-meta.xml
<CustomField>
    <fullName>Email_unsubscribe_preferences__c</fullName>
    <description>Email lists from which this contact has unsubscribed in the unsubscribe management page.</description>
    <inlineHelpText>Email lists from which this contact has unsubscribed in the unsubscribe management page.</inlineHelpText>
    <label>Email unsubscribe preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Action Alerts (Occasional)</fullName>
            </value>
            <value>
                <fullName>Events (Occasional)</fullName>
            </value>
            <value>
                <fullName>Fundraising Appeals (Occasional)</fullName>
            </value>
            <value>
                <fullName>Newsletter (Once a month)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>