force-app/main/default/objects/Contact/fields/FS_contact__c.field-meta.xml
<CustomField>
    <fullName>FS_contact__c</fullName>
    <description>Checked if this contact belongs to a fiscal sponsor account</description>
    <formula>Account.RecordType.DeveloperName == &quot;Organization_GM_FS&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if this contact belongs to a fiscal sponsor account</inlineHelpText>
    <label>FS contact</label>
    <type>Checkbox</type>
</CustomField>