force-app/main/default/objects/Contact/fields/Full_name__c.field-meta.xml
<CustomField>
    <fullName>Full_name__c</fullName>
    <formula>LastName &amp; IF(ISBLANK(FirstName), &quot;&quot;, &quot;, &quot; &amp;  FirstName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>