force-app/main/default/objects/Contact/fields/Gender_GM__c.field-meta.xml
<CustomField>
    <fullName>Gender_GM__c</fullName>
    <description>The gender of this contact</description>
    <inlineHelpText>The gender of this contact</inlineHelpText>
    <label>Gender GM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Trans</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>