force-app/main/default/objects/Contact/fields/GFW_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>GFW_Contact_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The GFW Contact ID</description>
    <externalId>true</externalId>
    <label>GFW Contact ID</label>
    <length>55</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>