force-app/main/default/objects/Contact/fields/GM_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>GM_ExternalID__c</fullName>
    <description>ID from FileMaker grantmaking database</description>
    <externalId>true</externalId>
    <inlineHelpText>ID from FileMaker grantmaking database</inlineHelpText>
    <label>GM ExternalID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>