force-app/main/default/objects/Contact/fields/Greeting__c.field-meta.xml
<CustomField>
    <fullName>Greeting__c</fullName>
    <inlineHelpText>This is the greeting salutation as it might be used in a letter or email such as &quot;Mr. Smith&quot; or &quot;Dr. Brown&quot;.  The system will automatically format a formal salutation unless you type one in.  This field can contain 40 characters.</inlineHelpText>
    <label>Greeting</label>
    <length>200</length>
    <type>Text</type>
</CustomField>