force-app/main/default/objects/Contact/fields/Headshot_Image__c.field-meta.xml
<CustomField>
    <fullName>Headshot_Image__c</fullName>
    <description>The headshot photo for this contact</description>
    <formula>/* Send image to a proxy site for dynamic scaling that preserves aspect ratio. */
/* Cut off the &quot;http://&quot; (or https://) part of the URL before passing to proxy site. */
/*
IMAGE( 
  &quot;https://images.weserv.nl/?url=&quot; &amp;
  IF( CONTAINS(Headshot_URL__c, &quot;//&quot;) , 
     RIGHT(Headshot_URL__c,  LEN(Headshot_URL__c) -  FIND(&quot;//&quot;, Headshot_URL__c) - 1) , 
     Headshot_URL__c) &amp;
  &quot;&amp;h=200&quot;,
 &quot;Not available&quot;
)
*/

IMAGE(Headshot_URL__c, &quot;Not available&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The headshot photo for this contact</inlineHelpText>
    <label>Headshot Image</label>
    <type>Text</type>
</CustomField>