force-app/main/default/objects/Contact/fields/Headshot_URL__c.field-meta.xml
<CustomField>
    <fullName>Headshot_URL__c</fullName>
    <description>URL of a headshot photo for this contact</description>
    <inlineHelpText>URL of a headshot photo for this contact</inlineHelpText>
    <label>Headshot URL</label>
    <type>Url</type>
</CustomField>