force-app/main/default/objects/Contact/fields/Is_primary_contact__c.field-meta.xml
<CustomField>
    <fullName>Is_primary_contact__c</fullName>
    <formula>IF(Account.Primary_contact__c =  Id , &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If checked, this Contact is the Primary Contact for the Account.</inlineHelpText>
    <label>Is Primary Contact?</label>
    <type>Text</type>
</CustomField>