force-app/main/default/objects/Contact/fields/Last_engagement_date__c.field-meta.xml
<CustomField>
    <fullName>Last_engagement_date__c</fullName>
    <description>The date of this contact&apos;s last activity in the marketing cloud</description>
    <inlineHelpText>The date of this contact&apos;s last activity in the marketing cloud</inlineHelpText>
    <label>Last engagement date</label>
    <type>Date</type>
</CustomField>