force-app/main/default/objects/Contact/fields/LinkedAddress__c.field-meta.xml
<CustomField>
    <fullName>LinkedAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Click this link to edit the Primary Address.</inlineHelpText>
    <label>Alternate Address Link</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>LAContacts</relationshipName>
    <type>Lookup</type>
</CustomField>