force-app/main/default/objects/Contact/fields/Member_number__c.field-meta.xml
<CustomField>
    <fullName>Member_number__c</fullName>
    <description>Auto-generated number for contact records</description>
    <displayFormat>M{0000000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>Auto-generated number for contact records</inlineHelpText>
    <label>Member number</label>
    <type>AutoNumber</type>
</CustomField>