force-app/main/default/objects/Contact/fields/Name_with_salutation__c.field-meta.xml
<CustomField>
    <fullName>Name_with_salutation__c</fullName>
    <formula>TEXT(Salutation) + IF(TEXT(Salutation) &lt;&gt; null, &quot; &quot;,null) +  FirstName + &quot; &quot; + LastName + IF (TEXT(Suffix__c) &lt;&gt; null, &quot;, &quot; + TEXT( Suffix__c ), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>