force-app/main/default/objects/Contact/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <description>Nickname of contact (individual)</description>
    <label>Nickname</label>
    <length>20</length>
    <type>Text</type>
</CustomField>