force-app/main/default/objects/Contact/fields/No_Direct_Mail__c.field-meta.xml
<CustomField>
    <fullName>No_Direct_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not send direct mail solicitations or direct mail cultivations.  (Previously &apos;No RMT mailings,&apos; aka &apos;No direct mail&apos; in Filemaker.)</description>
    <inlineHelpText>Do not send direct mail solicitations or direct mail cultivations.  (Previously &apos;No RMT mailings,&apos; aka &apos;No direct mail&apos; in Filemaker.)</inlineHelpText>
    <label>No Direct Mail</label>
    <type>Checkbox</type>
</CustomField>