force-app/main/default/objects/Contact/fields/No_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>No_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Don&apos;t send newsletters to this constituent</description>
    <label>No Newsletter</label>
    <type>Checkbox</type>
</CustomField>