force-app/main/default/objects/Contact/fields/No_Sharing__c.field-meta.xml
<CustomField>
    <fullName>No_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Don&apos;t share/sell contact info with other organizations</description>
    <label>No Sharing</label>
    <type>Checkbox</type>
</CustomField>