force-app/main/default/objects/Contact/fields/No_Sharing_acct__c.field-meta.xml
<CustomField>
    <fullName>No_Sharing_acct__c</fullName>
    <description>Do not share account/contact info with other organizations (set at the Account level)</description>
    <formula>Account.No_Sharing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Do not share account/contact info with other organizations (set at the Account level)</inlineHelpText>
    <label>No Sharing acct</label>
    <type>Checkbox</type>
</CustomField>