force-app/main/default/objects/Contact/fields/No_Solicitations__c.field-meta.xml
<CustomField>
    <fullName>No_Solicitations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No direct mail solicitations</description>
    <label>No Solicitations</label>
    <type>Checkbox</type>
</CustomField>