force-app/main/default/objects/Contact/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>Notes related to the processing of this contact record</description>
    <label>Note</label>
    <length>200</length>
    <type>Text</type>
</CustomField>