force-app/main/default/objects/Contact/fields/npo02__FirstCloseDate__c.field-meta.xml
<CustomField>
    <fullName>npo02__FirstCloseDate__c</fullName>
    <description>Do not update, updated by automatic process.</description>
    <label>First Gift Date</label>
    <type>Date</type>
</CustomField>