force-app/main/default/objects/Contact/fields/npo02__LargestAmount__c.field-meta.xml
<CustomField>
    <fullName>npo02__LargestAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Do not update, updated by automatic process.</description>
    <label>Largest Gift</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>